started work on the v2.0.0 - modular